# metta

./: .bazelrc  .cspell 2.json  .cspell.json  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .gitignore_webhook  .gitleaks.toml  .gitleaksignore  .importlinter  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .ruff.toml  .ruffignore  16206928838.txt  45x81_845791.npy  AGALITE_IMPLEMENTATION_SUMMARY.md  AGALITE_MERGE_SUMMARY.md  AGALITE_PR2126_VERIFICATION.md  AGALITE_VARIANTS_SUMMARY.md  AGENTS.md  API_README.md  ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_REFERENCE.md  BEHAVIOR_ANALYSIS_CONCLUSION.md  BRANCH_SUMMARY.md  BUGFIX_SUMMARY.md  BUG_FIXES_SUMMARY.md  BUG_REPORT.md  BUILD.bazel  CLADE.md  CLAUDE.md  CMakeLists.txt  (+473 more)
adaptive/: README.md  pyproject.toml
agent/: CHECKPOINT_FORMAT.md  Makefile  README.md  Refactor_Proposal.md  components.py  feature_encoder.py  metta_agent.py  policy_store.py  pyproject.toml  resnet_encoder.py  serialization_planning.md  simple_encoder.py
agent/kickstart/: abes_ks_checked.py  abes_ks_cycles.py
agent/lib/: LSTM.py  action.py  dm.py  effective_rank.py  ep_initializer.py  epi_test.py  feature_normalizer.py  lstm.py  merge_layer.py  metta_layer.py  nn_layer_library.py  normalizer.py  obs_enc.py  obs_shaper.py  observation_normalizer.py  position.py  util.py  weight_transformer.py
agent/tests/: test_actor_head_stability.py  test_agalite_policy.py  test_drama_world_model.py  test_fast_policy.py  test_feature_remapping.py  test_legacy_adapter.py  test_mamba_backbone_cache.py  test_mamba_components.py  test_mamba_drama.py  test_metta_agent.py  test_metta_agent_integration.py  test_multinomial_fp16.py  test_obs_shim_policy_env.py  test_obs_token_pad_strip.py  test_policy_cache.py  test_policy_record_yaml.py  test_policy_store.py  test_policy_trainable.py  test_policy_wrapper.py  test_smollm.py  test_smollm2_dtype.py  test_transformer_policy.py  test_vanilla_policy.py
agent/util/: distribution_utils.py  dynamics.py  eigen.py  embed_similarity.py  embedding_output.npy
app_backend/: .dockerignore  Dockerfile  Makefile  README.md  auth.py  build.sh  config.py  description_generator.py  docker-compose-logs.sh  docker-compose.dev.yml  generate_test_data.py  git_client.py  github_client.py  kind-app-backend.sh  kind-cluster.yaml  llm_client.py  metta_repo.py  openapi.json  pyproject.toml  query_logger.py  route_logger.py  server.py  stats_client.py
app_backend/routes/: dashboard_routes.py  (+3 more)
backend-shared/: pyproject.toml
bootstrap/: README.md  pyproject.toml
codebot/: AGENTS.md  BACKEND.md  CODEBOT.md  DESIGN.md  MANYBOT.md  README.md  WORKFLOWS.md  __init__.py  pyproject.toml
cogworks/: README.md  pyproject.toml
common/: Makefile  README.md  pyproject.toml
devops/: JOB_TESTING.md  README.md  README_multi_gpu_sweeps.md  __init__.py  add_to_leaderboard.py  add_to_leaderboard.sh  auto_ruff_fix.py  build_mettagrid.sh  checkout_and_build.sh  cogames_login.py  docker_launch.py  env.sh  evolve.sh  job_dispatcher.py  job_runner.py  lint_tensor_dtype.py  memory_leak.sh  observatory_login.py  publish_to_pypi.py  pyproject.toml  run.sh  sandbox.sh  setup.env  setup_build.sh  setup_dev.sh  setup_docker_sandbox.sh  setup_git_hooks.sh  sweep.sh  sweep_multi_gpu.sh  sweep_rollout.sh  test_clusters.py  test_recipes.py  train.sh
experiments/: DESIGN.md  EVAL_MISSIONS_REPORT.md  EXPERIMENT_SYSTEM_DESIGN.md  IMPROVEMENT_ANALYSIS.md  PHASE2_STATUS.md  README.md  README_corridors.md  SCRIPTED_AGENT_EVALUATION.md  TESTING_GUIDE.md  TESTING_GUIDE_V2.md  __init__.py  analysis.py  arena.py  cli_formatter.py  corridor_examples.py  curriculum_defs.py  diff_design.md  experiment.py  experiment_119c6173_manifest.json  experiment_5d898444_manifest.json  experiment_b2f8554d_manifest.json  experiment_b5bc1b07_manifest.json  launch.py  monitoring.py  navigation.py  new_notebook.py  new_research_notebook.py  opcon_multiday.sh  pyproject.toml  quick_map_check.py  runner.py  science_README.md  scripted_agent_missions.md  simple_radial_example.py  skypilot_job_config.py  skypilot_service.py  sweep_arena.py  test_navigation_corridors.py  test_radial_corridors.py  training_job.py  (+7 more)
gitta/: pyproject.toml
mcp_server/: pyproject.toml  pyrightconfig.json  server.py
metrics_analysis/: README.md  pyproject.toml  run_example.sh
mettagrid/: .bazelrc  .clang-tidy  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  GDB_DEBUG.md  MANIFEST.in  MEMORY_SAFETY.md  MODULE.bazel  Makefile  README.md  REPO_ORGANIZATION.md  WORKSPACE  __init__.py  action.pxd  action.pyx  action_handler.pxd  action_handler.pyx  base_encoder.pxd  base_encoder.pyx  bazel-bin  bazel-mettagrid  bazel-out  bazel-testlogs  bazel_build.py  bench_json.cc  clang-tidy.sh  compiler_flags.cmake  conftest.py  cuda.cmake  demo.py  event.hpp  event.pxd  event.pyx  generate-coverage.sh  generate_compile_commands.py  generate_coverage.py  (+29 more)
sim/: Makefile  README.md  __init__.py  pyproject.toml  report.py  sim.py
softmax/: Dockerfile  atlas.py  pyproject.toml  softmax.py
sweep/: Makefile  README.md  pyproject.toml
tribal/: .gitignore  BINDINGS.md  README.md  README_PROCESS_SEPARATION.md  actions.tmp  build_bindings.sh  build_headless_server.sh  build_nimpy_viewer.sh  build_process_viewer.sh  data  nimble.paths  pyproject.toml  test_lantern_coloring  test_tribal_bindings.py  tribal.nimble  tribal_actions.json  tribal_control.json  tribal_headless_server  tribal_process_controller.py  tribal_process_viewer  tribal_replay_1757456188.tribal  tribal_state.json
wandb_carbs/: LICENSE  README.md  __init__.py  pyproject.toml  wandb_carbs.py
webhook_service/: Dockerfile  TESTING_ASSIGNEES.md  TESTING_WITH_REAL_PR.md  VERIFY_ATLAS_APP.md  check_github_token.py  get_webhook_secret.py  lambda_function.py  pyproject.toml  test_asana_token.py  test_atlas_app.py  test_e2e.py  test_oauth_credentials.py  test_webhook_local.sh  test_with_real_pr.sh  trigger_opened_event.py  update_pr_description.py
(+92228 files in other folders)
