load("@bazel//tools/build_defs/repo:git.bzl", "git_repository")
load("@cython//Tools:rules.bzl", "pyx_library")

git_repository(
    name = "fast_gae",
    remote = "https://github.com/Metta-AI/fast_gae.git",
    branch = "main",
)

git_repository(
    name = "pufferlib",
    remote = "https://github.com/Metta-AI/pufferlib.git",
    branch = "main",
)

git_repository(
    name = "metta",
    remote = "https://github.com/Metta-AI/metta.git",
    branch = "main",
)
