[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-app-backend"
version = "0.1.0"
description = "Metta AI App Backend Server"
authors = [{ name = "David Bloomin", email = "daveey@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
urls = { Homepage = "https://daveey.github.io", Repository = "https://github.com/Metta-AI/metta" }

dependencies = [
  "aioboto3>=13.2.0",
  "asana>=5.2.2",
  "boto3>=1.38.32",
  "ddtrace>=2.6.0",
  "duckdb>=1.3.0",
  "fastapi>=0.115.5",
  "uvicorn[standard]>=0.34.2",
  "psycopg[binary,pool]>=3.2.9",
  "pydantic>=2.11.5",
  "pydantic-settings>=2.10.1",
  "pytest-asyncio>=1.0.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "wandb>=0.22.3",
  "metta-common",
  "gitta",
  "sqlmodel>=0.0.22",
  "greenlet>=3.0.0",
  "kopf>=1.37.0",
  "kubernetes>=31.0.0",
]

[dependency-groups]
dev = [
  "kubernetes-stubs>=22.6.0",
  "pyright>=1.1.401",
  "pytest>=8.3.3",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.1.1",
  "pytest-xdist>=3.8.0",
  "ruff>=0.11.13",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["metta.app_backend"]

[tool.setuptools.package-data]
"metta.app_backend" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["metta.app_backend"]

[tool.uv.sources]
metta-common = { workspace = true }
