[project]
name = "softmax-backend-shared"
version = "0.1.0"
description = "Shared backend services for Metta applications"
dependencies = [
    "softmax-common>=0.1.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metta", "metta.backend_shared", "metta.backend_shared.*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"