[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-bootstrap"
version = "0.1.0"
description = "Bootstrap package to install build dependencies for metta packages"
authors = [{ name = "David Bloomin", email = "daveey@gmail.com" }]
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

dependencies = [
    "scikit-build-core>=0.10.0",
    "pybind11==2.10.4",
    "cmake>=3.22",
    "ninja",
    "wheel",
    "numpy<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["metta.bootstrap"]

[tool.setuptools.package-data]
"metta" = ["__init__.py"]
"metta.bootstrap" = ["py.typed"] 
