[project]
name = "codebot"
version = "0.1.0"
description = "Codebot tools for AI development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "tiktoken>=0.9.0",
    "gitlib>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["codeclip", "manybot", "goalbot", "remotebot"]