[project]
name = "codebot"
version = "0.1.0"
description = "Codebot tools for AI development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "tiktoken>=0.9.0", "gitta>=0.1.0"]

[project.scripts]
codeclip = "codeclip.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeclip"]

[tool.uv.sources]
gitta = { workspace = true }
