[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-cogworks"
version = "0.1.0"
description = "Curriculum utilities for Metta"
authors = [{ name = "David Bloomin", email = "daveey@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
urls = { Homepage = "https://daveey.github.io", Repository = "https://github.com/Metta-AI/metta" }

dependencies = [
  "mettagrid",
  "numpy>=2",
  "pufferlib-core",
  "pydantic>=2.12.2",
  "typing_extensions>=4.12.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.401",
  "pytest>=8.3.3",
  "pytest-cov>=6.1.1",
  "pytest-xdist>=3.8.0",
  "ruff>=0.11.13",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["metta.cogworks", "metta.cogworks.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["metta.cogworks"]

[tool.uv.sources]
mettagrid = { workspace = true }
pufferlib-core = { workspace = true }
