[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-devops"
version = "0.1.0"
description = "Devops support for metta projects"
requires-python = ">=3.9"
dependencies = ["skypilot>=0.10.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["devops*"]

[tool.uv.sources]
gitta = { workspace = true }
