[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metta-devops"
version = "0.1.0"
description = "Devops support for metta projects"
requires-python = ">=3.9"
dependencies = ["skypilot>=0.10.3", "gitta", "wandb>=0.19.11"]

[tool.setuptools]
packages = ["devops", "devops.skypilot", "devops.docker"]

[tool.setuptools.package-dir]
devops = "."

[tool.uv.sources]
gitta = { path = "../gitta", editable = true }
