[project]
name = "experiments"
version = "0.1.0"
description = "Metta experiments and notebooks"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = ["typer[all]>=0.9.0", "rich>=13.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["*.ipynb"]
