[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitta"
version = "0.2.0"
description = "Git utilities library with PR splitting functionality"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "anthropic>=0.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitta*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short"]
