[project]
name = "metta-mcp-server"
version = "0.1.0"
description = "Metta MCP server for use with LLM agents"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "mcp>=1.13.0",
    "wandb>=0.17.0",
    "boto3>=1.34.0",
    "typing>=3.7.4.3",
    "pathlib>=1.0.1",
    "fastmcp>=2.11.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." } # keep current flat layout

[tool.setuptools.packages.find]
#include = ["subpackage*"]    # ship a subpackage
