[project]
name = "metta-metrics-analysis"
version = "0.1.0"
description = "Statistical analysis tools for comparing Metta training runs from Weights & Biases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wandb>=0.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pyarrow>=12.0.0",     # For parquet support
    "ipywidgets>=8.0.0",   # For interactive notebooks
    "plotly>=5.14.0",      # For interactive plots
    "statsmodels>=0.14.0", # For multiple comparison corrections
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
metta-analyze = "metta_metrics_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
